--- a/demo.ipynb
+++ b/demo.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "convert the generated spectrogram to audio ｖ(⌒ｏ⌒)ｖ♪ ...\n",
+      "converting the generated spectrogram to audio ｖ(⌒ｏ⌒)ｖ♪ ...\n",
       "DONE!\n"
      ]
     }
